--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -6,8 +6,8 @@ on:
   workflow_dispatch:
 
 env:
-  INSTANCE: 'Writerside/h'
-  ARTIFACT: 'webHelph2-all.zip'
+  INSTANCE: 'Writerside/t'
+  ARTIFACT: 'webHelpt2-all.zip'
   DOCKER_VERSION: '243.21565'
 
 jobs:
