--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   INSTANCE: 'Writerside/t'
-  ARTIFACT: 'webHelpt2-all.zip'
+  ARTIFACT: 'webHelpT2-all.zip'
   DOCKER_VERSION: '243.21565'
 
 jobs:
