--- a/Writerside/writerside.cfg
+++ b/Writerside/writerside.cfg
@@ -3,7 +3,7 @@
 
 <ihp version="2.0">
     <topics dir="topics" web-path="topics"/>
-    <images dir="images" web-path="images"/>
+    <images dir="images" web-path="Servers-Wiki"/>
     <instance src="h.tree" version="1.0"/>
     <instance src="t.tree"/>
 </ihp>
