--- a/Writerside/writerside.cfg
+++ b/Writerside/writerside.cfg
@@ -5,5 +5,5 @@
     <topics dir="topics" web-path="topics"/>
     <images dir="images" web-path="Servers-Wiki"/>
     <instance src="h.tree" version="1.0"/>
-    <instance src="t.tree"/>
+    <instance src="t.tree" version="1.0"/>
 </ihp>
