Added FTP Server tuto

--- a/Writerside/writerside.cfg
+++ b/Writerside/writerside.cfg
@@ -6,4 +6,5 @@
     <images dir="images" web-path="Servers-Wiki"/>
     <instance src="w.tree" version="1.0"/>
     <instance src="t.tree" version="1.0"/>
+    <instance src="Writerside_libraries.tree"/>
 </ihp>
